Bug 92896 - Dialog editor: deleting a language crashes LibO
Summary: Dialog editor: deleting a language crashes LibO
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: high critical
Assignee: Marek Dolezel
URL:
Whiteboard: target:5.1.0 target:5.0.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2015-07-23 22:00 UTC by Mikhail Zemlyanukha
Modified: 2016-10-25 19:19 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
crash log (17.58 KB, application/zip)
2015-07-23 22:00 UTC, Mikhail Zemlyanukha
Details
bt with debug symbols (15.84 KB, text/plain)
2015-08-02 10:41 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mikhail Zemlyanukha 2015-07-23 22:00:12 UTC
Created attachment 117399 [details]
crash log

Steps to reproduce:

1. Tools / Macros / Organize Dialogs
2. New Dialog
3. Edit dialog
4. Press 'Manage Language' toolbar (may need to enable Language toolbar in Views)
5. Add a language
6. delete it
7. LibO crashes:

$ /home/mixa/LibreOfficeDev_5.1.0.0.alpha1_Linux_x86-64_archive/program/soffice --writer

...

warn:vcl.layout:4068:1:vcl/source/window/builder.cxx:217: Unable to read .ui file: file:///home/mixa/LibreOfficeDev_5.1.0.0.alpha1_Linux_x86-64_archive/program/../share/config/soffice.cfg/modules/BasicIDE/ui/deletelang.ui
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x00007fafb8fb4548, pid=4068, tid=140392947906816
#
# JRE version: OpenJDK Runtime Environment (8.0_45-b14) (build 1.8.0_45-b14)
# Java VM: OpenJDK 64-Bit Server VM (25.45-b02 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C  [libgobject-2.0.so.0+0x21548]
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/mixa/lo-sdk-examples/java/OptionsPageDemo/hs_err_pid4068.log
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.java.com/bugreport/crash.jsp

$ uname -a
Linux mixa_arch 4.0.7-2-ARCH #1 SMP PREEMPT Tue Jun 30 07:50:21 UTC 2015 x86_64 GNU/Linux

hs_err_pid4068.log attached
Comment 1 Jacques Guilleron 2015-07-24 00:04:38 UTC
HI Mikhail,

I reproduce with 
LO 5.1.0.0.alpha1+ Build ID: a625cd702700ae1773966a3133d27027d1c4d083
TinderBox: Win-x86@39, Branch:master, Time: 2015-07-07_08:23:06
& Windows 7 Home Premium
Also with 
LO 4.4.0.0.beta1 Build ID: 9af3d21234aa89dac653c0bd76648188cdeb683e
but no with 
LO 4.3.5.2 Build ID: 3a87456aaa6a95c63eea1c1b3201acedf0751bd5

I set Status to NEW and Keywords to regression.

Thanks for your report.
Comment 2 Marek Dolezel 2015-07-31 16:22:06 UTC
Hello, 

I think i have found a problem in  basctl/source/dlged/managelang.cxx:167 deletelang.ui is used instead of deletelangdialog.ui 

I will push fix to gerrit when verified.

Thanks for reporting.
Comment 3 Julien Nabet 2015-08-02 10:41:01 UTC
Created attachment 117599 [details]
bt with debug symbols

On pc Debian x86-64 with master sources updated yesterday, I've got a crash when clicking Add, so even before trying to delete it.
Comment 4 Julien Nabet 2015-08-02 10:50:23 UTC
Marek: anyway, you seem right considering http://cgit.freedesktop.org/libreoffice/core/commit/?id=b6d25be2d7ab81fb5343b742542b79bad2121024
Caolan: do you prefer the filename itself or the ref to the filename to be changed?
Comment 5 Marek Dolezel 2015-08-03 10:35:58 UTC
Julien: I would change reference, but I am unable to fix anyway. I am on holiday this week with slow network and with old c2d thinkpad.
Comment 6 Julien Nabet 2015-08-03 11:57:13 UTC
Marek: no pb, I could push the fix. Let's wait Caolan's feedback first.
Comment 7 Caolán McNamara 2015-08-07 08:06:34 UTC
easiest to just change the source to point to the right file name
Comment 8 Commit Notification 2015-08-07 08:13:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8620d35f73f38f3cc6b550909c73188b64a88bf

Resolves: tdf#92896 wrong delete language dialog path

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2015-08-07 08:15:44 UTC
i imagine that'll fix it
Comment 10 Commit Notification 2015-08-07 09:37:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=89d8ad07c3fe619a0efa809750687e1276668fd4&h=libreoffice-5-0

Resolves: tdf#92896 wrong delete language dialog path

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Mikhail Zemlyanukha 2015-08-13 15:38:31 UTC
Works OK with Version: 5.1.0.0.alpha1+
Build ID: 56050b75941355285911c0293a3c02fc403d0c89
TinderBox: Linux-rpm_deb-x86_64@70-TDF-dbg, Branch:master, Time: 2015-08-13_06:13:53

The bug may be closed
Comment 12 Robinson Tryon (qubit) 2015-12-17 10:29:43 UTC Comment hidden (obsolete)