Resolves: tdf#92896 wrong delete language dialog path

Change-Id: I720e95c6c5e8b613ef880aa65f5e8cdb85143b58
Reviewed-on: https://gerrit.libreoffice.org/17566
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>